# Aperilex

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE-archived.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_claude.sh
.claude/agents/: aperilex-backend-architect.md  aperilex-code-quality-checker.md  aperilex-code-quality.md  aperilex-environment-setup.md  aperilex-financial-analyser.md  aperilex-frontend-developer.md  aperilex-test-strategist.md  aperilex-test-strategy.md
.claude/agents-archived/: aperilex-environment-setup.md  aperilex-financial-analyser.md
.claude/commands/: code-test.md  explore-plan-code-test.md  explore-plan.md  explore-review-plan.md  generate-task-file.md  run-next-task.md
alembic/: env.py
alembic/versions/: 4f48d5eb2b27_add_company_filing_and_analysis_models.py  b0067a1a039e_initial_migration_with_user_model.py  c5a3b8f9d1e2_remove_analysis_results_column.py
docs/: SETUP.md  SQS_INITIALIZATION_FIX_2025-08-28.md  backend-test-fixes-summary.md
docs/architecture/: LLM_COMPANY_LEVEL_ANALYSIS.md
docs/data-migration/: AWS_MIGRATION_GUIDE.md  MIGRATION_COMPLETED_20250828.md  MIGRATION_SUMMARY.md  PRODUCTION_FIXES_2025-08-28.md  RUNNING_MIGRATION_AND_S3_SYNC_FROM_DEPLOYED_BEANSTALK_APP.md  S3_STORAGE_ISSUE_ANALYSIS.md
docs/deployment/: DEPLOYMENT_PLAN.md  claude-conversation-2025-08-18-f9d79ce8.md
docs/features/: BATCH_FILING_IMPORT.md
docs/implementation/: COMPREHENSIVE_PROJECT_ANALYSIS-250731.md  COMPREHENSIVE_PROJECT_ANALYSIS-250802.md  PHASE_5_COMPANY_FILING_FEATURES_SUMMARY.md  PHASE_5_CORE_INFRASTRUCTURE_SUMMARY.md  PHASE_5_LAYOUT_NAVIGATION_SUMMARY.md
docs/issues/: CELERY_COMPREHENSIVE_ANALYSIS_TYPE_ISSUE.md  GET_FILING_BY_ID_ANALYSIS.md  TASK_ID_REFACTORING_NOTE.md
docs/phases/: PHASES.md  PHASE_2_DETAILED_PLAN.md  PHASE_3_DETAILED_PLAN.md  PHASE_3_TESTING_SUMMARY.md  PHASE_4_DETAILED_PLAN.md  PHASE_5_DETAILED_PLAN.md  PREDEPLOYMENT_REQUIREMENTS.md  PRE_DEPLOYMENT_REQUIREMENTS.md  README.md
docs/plans/: plan-v001.md
docs/reports/: frontend-analysis-2025-08-11.md
docs/tasks/: tasks.md
docs/tests/: PHASE_5_TEST_STATUS.md  PHASE_5_TEST_SUMMARY.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e-tests/: example.spec.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: analyses.ts  client.test.ts  client.ts  companies.ts  filings.ts  health.ts  index.ts  tasks.ts  types.ts
frontend/src/components/: ThemeProvider.test.tsx  ThemeProvider.tsx
frontend/src/examples/: ProgressiveAnalysisExample.tsx
frontend/src/hooks/: index.ts  useAnalysis.test.ts  useAnalysis.ts  useCompany.test.ts  useCompany.ts  useFiling.test.ts  useFiling.ts  useFilingAnalysisStatus.ts
frontend/src/router/: index.test.tsx  index.tsx
frontend/src/services/: CompanyService.test.ts  CompanyService.ts  README.md  index.ts
frontend/src/test/: README-navigation-testing.md  README.md  custom-jsdom-environment.ts  example.test.ts  jsdom-navigation-mock.ts  (+6 more)
infrastructure/: Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  api_gateway.py  backend.py  certificates.py  database.py  fast_destroy.sh  frontend.py  networking.py  orchestration.py  requirements.txt
scripts/: README.md  aws-entrypoint.sh  batch_analyze_filings.py  batch_analyze_filings_enhanced.py  batch_analyze_filings_enhanced_sequential.py  docker-entrypoint.sh  find_test_filings.py  generate_analysis_samples.py  import_filings.py  import_snp500.sh  migrate_step1_export.sh  migrate_step2_import.sh  migrate_to_aws_simplified.py  reset_database.sh  run_tests.sh  run_worker.py  setup.sh  sync_to_aws.sh  validate_api_integration.py  validate_phase3.py
src/: __init__.py
src/application/: __init__.py  application_service.py  factory.py  handlers_registry.py
src/shared/: rate_limiter.py  sec_rate_limiter.py
tests/: __init__.py  conftest.py
tests/e2e/: test_final_validation.py
tests/fixtures/: realistic_analysis_data.py
tests/integration/: __init__.py  test_infrastructure.py  test_template_filtering_integration.py
tests/performance/: conftest.py  test_analysis_template_performance.py
(+376 files in other folders)
